--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -1,9 +1,9 @@
-<%= form_with(model: @task, local: true) do |f| %>
+<%= form_with(model: task, local: true) do |f| %>
 
-  <% if message.errors.any? %>
+  <% if task.errors.any? %>
     <div id="error_explanation">
       <ul>
-        <% message.errors.full_messages.each do |ta| %>
+        <% task.errors.full_messages.each do |ta| %>
           <li><%= ta %></li>
         <% end %>
       </ul>
